fixes broken search when description too short. https://www.pivotaltracker.com/projects/224127#

--- a/media/css/layout.css
+++ b/media/css/layout.css
@@ -561,6 +561,10 @@ div.video_details div strong {
 	background: transparent url(../images/video_details_icons.png) 0 5px no-repeat;
 }
 
+.info p {
+	float: none !important;
+}
+
 /* Search
 ------------------------------------------------*/
 
